--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
     <title>Mission In Snowdriftland - Indie Games Edition</title>
@@ -16,7 +16,7 @@
         body {
             color: #000000;
             background-color: #ffffff;
-            margin-left: 0px;
+            margin-left: 0px;    
             margin-top: 0px;
             margin-right: 0px;
             margin-bottom: 0px;
@@ -25,28 +25,22 @@
     </style>
 </head>
 <body>
-    <div>
+    <div>     
         <table width="100%" height="100%" border="0">
             <tr>
-                <td align="center" valign="middle">
+                <td  align="center" valign="middle">
                     <div id="flashDiv" align="center" valign="middle">
-                        <!-- Displaying an image or some content to simulate Flash -->
+                        <!-- Updated image path -->
                         <img src="img/flashcontent.jpg" alt="Flash Content" height="578" width="900" border="0" />
                     </div>
                     <script type="text/javascript">
-                        // Simulating the presence of Flash
-                        var so = new SWFObject("calendar.swf?t=" + new Date().getTime(), "stage", "900px", "578px", "9", "#ffffff");
-                        so.addParam("menu", false);
-                        // Adding variables if needed
-                        // so.addVariable("l", gup( "l" ) );
-                        // so.addVariable("c", gup( "c" ) );
-                        // so.addVariable("p", gup( "p" ) );
-                        // so.addVariable("p1", gup( "p1" ) );
+                        var so = new SWFObject("Mission-in-Snowdriftland/calendar.swf?t=" + new Date().getTime(), "stage", "900px", "578px", "9", "#ffffff");
+                        so.addParam("menu",false);
                         so.write("flashDiv");
                     </script>
-                </td>
-            </tr>
+                </td> 
+            </tr>   
         </table>
-    </div>
+    </div> 
 </body>
 </html>
