--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mission In Snowdriftland - Indie Games Edition</title>
-    <!-- Include SWFObject library -->
+    <!-- Include SWFObject library with defer attribute -->
     <script type="text/javascript" src="https://raw.githubusercontent.com/ninjaadam/Mission-in-Snowdriftland/main/misc/swfobject.js" defer></script>
 </head>
 <body>
@@ -19,9 +19,14 @@
                     <script type="text/javascript">
                         // Wait for the document to finish loading before using SWFObject
                         document.addEventListener('DOMContentLoaded', function() {
-                            var so = new SWFObject("https://raw.githubusercontent.com/ninjaadam/Mission-in-Snowdriftland/main/Mission-in-Snowdriftland/calendar.swf?t=" + new Date().getTime(), "stage", "900px", "578px", "9", "#ffffff");
-                            so.addParam("menu",false);
-                            so.write("flashDiv");
+                            // Check if SWFObject is defined before using it
+                            if (typeof SWFObject !== 'undefined') {
+                                var so = new SWFObject("https://raw.githubusercontent.com/ninjaadam/Mission-in-Snowdriftland/main/Mission-in-Snowdriftland/calendar.swf?t=" + new Date().getTime(), "stage", "900px", "578px", "9", "#ffffff");
+                                so.addParam("menu",false);
+                                so.write("flashDiv");
+                            } else {
+                                console.error('SWFObject library is not loaded.');
+                            }
                         });
                     </script>
                 </td>
