--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mission In Snowdriftland - Indie Games Edition</title>
-    <!-- Include SWFObject library with defer attribute -->
-    <script type="text/javascript" src="https://raw.githubusercontent.com/ninjaadam/Mission-in-Snowdriftland/main/misc/swfobject.js" defer></script>
+    <!-- Include SWFObject library with onload event -->
+    <script type="text/javascript">
+        // Define a function to create the SWFObject instance
+        function createSWFObject() {
+            var so = new SWFObject("https://raw.githubusercontent.com/ninjaadam/Mission-in-Snowdriftland/main/Mission-in-Snowdriftland/calendar.swf?t=" + new Date().getTime(), "stage", "900px", "578px", "9", "#ffffff");
+            so.addParam("menu",false);
+            so.write("flashDiv");
+        }
+    </script>
+    <script type="text/javascript" src="https://raw.githubusercontent.com/ninjaadam/Mission-in-Snowdriftland/main/misc/swfobject.js" onload="createSWFObject()"></script>
 </head>
 <body>
     <div>
@@ -16,19 +24,6 @@
                         <!-- Use raw.githubusercontent.com URLs -->
                         <img src="https://raw.githubusercontent.com/ninjaadam/Mission-in-Snowdriftland/main/img/flashcontent.jpg" alt="Flash Content" height="578" width="900" border="0" />
                     </div>
-                    <script type="text/javascript">
-                        // Wait for the document to finish loading before using SWFObject
-                        document.addEventListener('DOMContentLoaded', function() {
-                            // Check if SWFObject is defined before using it
-                            if (typeof SWFObject !== 'undefined') {
-                                var so = new SWFObject("https://raw.githubusercontent.com/ninjaadam/Mission-in-Snowdriftland/main/Mission-in-Snowdriftland/calendar.swf?t=" + new Date().getTime(), "stage", "900px", "578px", "9", "#ffffff");
-                                so.addParam("menu",false);
-                                so.write("flashDiv");
-                            } else {
-                                console.error('SWFObject library is not loaded.');
-                            }
-                        });
-                    </script>
                 </td>
             </tr>
         </table>
