--- a/index.html
+++ b/index.html
@@ -5,15 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mission In Snowdriftland - Indie Games Edition</title>
     <!-- Include SWFObject library with onload event -->
-    <script type="text/javascript">
-        // Define a function to create the SWFObject instance
-        function createSWFObject() {
-            var so = new SWFObject("https://raw.githubusercontent.com/ninjaadam/Mission-in-Snowdriftland/main/Mission-in-Snowdriftland/calendar.swf?t=" + new Date().getTime(), "stage", "900px", "578px", "9", "#ffffff");
-            so.addParam("menu",false);
-            so.write("flashDiv");
-        }
-    </script>
-    <script type="text/javascript" src="https://raw.githubusercontent.com/ninjaadam/Mission-in-Snowdriftland/main/misc/swfobject.js" onload="createSWFObject()"></script>
+    <script type="text/javascript" src="https://raw.githubusercontent.com/ninjaadam/Mission-in-Snowdriftland/main/misc/swfobject.js" defer></script>
 </head>
 <body>
     <div>
@@ -28,5 +20,26 @@
             </tr>
         </table>
     </div>
+    <script type="text/javascript">
+        // Debugging statement to ensure this script is executed
+        console.log('Script loaded.');
+
+        // Function to create SWFObject instance
+        function createSWFObject() {
+            console.log('Creating SWFObject instance...');
+            var so = new SWFObject("https://raw.githubusercontent.com/ninjaadam/Mission-in-Snowdriftland/main/Mission-in-Snowdriftland/calendar.swf?t=" + new Date().getTime(), "stage", "900px", "578px", "9", "#ffffff");
+            so.addParam("menu",false);
+            so.write("flashDiv");
+        }
+
+        // Check if SWFObject is loaded
+        if (typeof SWFObject === 'undefined') {
+            console.error('SWFObject library not loaded.');
+        } else {
+            console.log('SWFObject library loaded.');
+            // Call the function to create SWFObject instance
+            createSWFObject();
+        }
+    </script>
 </body>
 </html>
