--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mission In Snowdriftland - Indie Games Edition</title>
-    <!-- Include locally hosted SWFObject library -->
-    <script type="text/javascript" src="https://ninjaadam.github.io/Mission-in-Snowdriftland/js/swfobject.js" defer></script>
+    <!-- Include SWFObject library from CDN -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/swfobject/2.3.20161020/swfobject.min.js" defer></script>
 </head>
 <body>
     <div>
