updated some files

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <script type="text/javascript">
         var so = new SWFObject("calendar.swf?t=" + new Date().getTime(), "stage", "900", "578", "9", "#ffffff");
         so.addParam("menu", false);
+        // Add any additional parameters or variables if needed
+        // so.addVariable("paramName", "paramValue");
         so.write("flashDiv");
     </script>
 </body>
