--- a/index.html
+++ b/index.html
@@ -1,62 +1,36 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>Mission In Snowdriftland - Indie Games Edition</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="language" content="en" />
-    <meta name="author" content="tons of bits" />
-    <meta name="publisher" content="tons of bits" />
-    <meta name="copyright" content="tons of bits" />
-    <meta name="robots" content="index, follow, all" />
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <script type="text/javascript" src="misc/swfobject.js"></script>
     <style type="text/css">
-        <!--
         body {
             color: #000000;
             background-color: #ffffff;
-            margin-left: 0px;    
-            margin-top: 0px;
-            margin-right: 0px;
-            margin-bottom: 0px;
+            margin: 0;
+            padding: 0;
         }
-        -->
+        #flashContainer {
+            width: 900px;
+            height: 578px;
+            margin: 0 auto;
+        }
     </style>
 </head>
 <body>
-    <div>     
-        <table width="100%" height="100%" border="0">
-            <tr>
-                <td  align="center" valign="middle">
-                    <div id="flashDiv" align="center" valign="middle">
-                        <map name="noflash">
-                            <area href="http://www.adobe.com/shockwave/download/download.cgi?P1_Prod_Version=ShockwaveFlash" alt="Get Adobe Flash Player" coords="432,440,568,477" shape="rect" target="_blank">
-                        </map>
-                        <img usemap="#noflash" src="img/noflash.jpg" alt="" height="870" width="990" border="0" />
-                    </div>
-                    <script type="text/javascript">
-                        function gup(name) {
-                            name = name.replace(/[\[]/,"\\\[").replace(/[\]]/,"\\\]");
-                            var regexS = "[\\?&]"+name+"=([^&#]*)";
-                            var regex = new RegExp(regexS);
-                            var results = regex.exec(window.location.href);
-                            if (results == null)
-                                return "";
-                            else
-                                return results[1];
-                        }
-                                
-                        var so = new SWFObject("calendar.swf", "stage", "900px", "578px", "9", "#ffffff");
-                        so.addParam("menu",false);
-                        so.addVariable("l", gup("l"));
-                        so.addVariable("c", gup("c"));
-                        so.addVariable("p", gup("p"));
-                        so.addVariable("p1", gup("p1"));
-                        so.write("flashDiv");
-                    </script>
-                </td> 
-            </tr>   
-        </table>
-    </div> 
+    <div id="flashContainer"></div>
+
+    <script type="text/javascript">
+        var flashContainer = document.getElementById("flashContainer");
+
+        function embedSWF() {
+            var so = new SWFObject("calendar.swf", "calendar", "900", "578", "9", "#ffffff");
+            so.addParam("menu", false);
+            so.write(flashContainer);
+        }
+
+        window.onload = embedSWF;
+    </script>
 </body>
 </html>
