--- a/index.html
+++ b/index.html
@@ -2,35 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Mission In Snowdriftland - Indie Games Edition</title>
-    <script type="text/javascript" src="misc/swfobject.js"></script>
-    <style type="text/css">
-        body {
-            color: #000000;
-            background-color: #ffffff;
-            margin: 0;
-            padding: 0;
-        }
-        #flashContainer {
-            width: 900px;
-            height: 578px;
-            margin: 0 auto;
-        }
-    </style>
+    <title>Embedded Flash Content</title>
+    <script type="text/javascript" src="swfobject.js"></script>
 </head>
 <body>
-    <div id="flashContainer"></div>
-
+    <div id="flashContent">
+        This text will be replaced with Flash content.
+    </div>
     <script type="text/javascript">
-        var flashContainer = document.getElementById("flashContainer");
-
-        function embedSWF() {
-            var so = new SWFObject("calendar.swf", "calendar", "900", "578", "9", "#ffffff");
-            so.addParam("menu", false);
-            so.write(flashContainer);
-        }
-
-        window.onload = embedSWF;
+        var flashvars = {};
+        var params = {};
+        params.quality = "high";
+        params.bgcolor = "#ffffff";
+        params.allowscriptaccess = "sameDomain";
+        var attributes = {};
+        attributes.id = "calendar";
+        attributes.name = "calendar";
+        attributes.align = "middle";
+        swfobject.embedSWF("calendar.swf", "flashContent", "900", "578", "9.0.0", false, flashvars, params, attributes);
     </script>
 </body>
 </html>
