--- a/index.html
+++ b/index.html
@@ -1,25 +1,52 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Embedded Flash Content</title>
-    <script type="text/javascript" src="swfobject.js"></script>
+    <title>Mission In Snowdriftland - Indie Games Edition</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="language" content="en" />
+    <meta name="author" content="tons of bits" />
+    <meta name="publisher" content="tons of bits" />
+    <meta name="copyright" content="tons of bits" />
+    <meta name="robots" content="index, follow, all" />
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+
+    <script type="text/javascript" src="misc/swfobject.js"></script>
+    <style type="text/css">
+        <!--
+        body {
+            color: #000000;
+            background-color: #ffffff;
+            margin-left: 0px;    
+            margin-top: 0px;
+            margin-right: 0px;
+            margin-bottom: 0px;
+        }
+        -->
+    </style>
 </head>
 <body>
-    <div id="flashContent">
-        This text will be replaced with Flash content.
-    </div>
-    <script type="text/javascript">
-        var flashvars = {};
-        var params = {};
-        params.quality = "high";
-        params.bgcolor = "#ffffff";
-        params.allowscriptaccess = "sameDomain";
-        var attributes = {};
-        attributes.id = "calendar";
-        attributes.name = "calendar";
-        attributes.align = "middle";
-        swfobject.embedSWF("calendar.swf", "flashContent", "900", "578", "9.0.0", false, flashvars, params, attributes);
-    </script>
+    <div>     
+        <table width="100%" height="100%" border="0">
+            <tr>
+                <td  align="center" valign="middle">
+                    <div id="flashDiv" align="center" valign="middle">
+                        <!-- Displaying an image or some content to simulate Flash -->
+                        <img src="img/flashcontent.jpg" alt="Flash Content" height="578" width="900" border="0" />
+                    </div>
+                    <script type="text/javascript">
+                        // Simulating the presence of Flash
+                        var so = new SWFObject("calendar.swf?t=" + new Date().getTime(), "stage", "900px", "578px", "9", "#ffffff");
+                        so.addParam("menu",false);
+                        // Adding variables if needed
+                        // so.addVariable("l", gup( "l" ) );
+                        // so.addVariable("c", gup( "c" ) );
+                        // so.addVariable("p", gup( "p" ) );
+                        // so.addVariable("p1", gup( "p1" ) );
+                        so.write("flashDiv");
+                    </script>
+                </td> 
+            </tr>   
+        </table>
+    </div> 
 </body>
 </html>
