--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
     <title>Mission In Snowdriftland - Indie Games Edition</title>
@@ -9,7 +9,6 @@
     <meta name="copyright" content="tons of bits" />
     <meta name="robots" content="index, follow, all" />
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-
     <script type="text/javascript" src="misc/swfobject.js"></script>
     <style type="text/css">
         <!--
@@ -30,18 +29,29 @@
             <tr>
                 <td  align="center" valign="middle">
                     <div id="flashDiv" align="center" valign="middle">
-                        <!-- Displaying an image or some content to simulate Flash -->
-                        <img src="img/flashcontent.jpg" alt="Flash Content" height="578" width="900" border="0" />
+                        <map name="noflash">
+                            <area href="http://www.adobe.com/shockwave/download/download.cgi?P1_Prod_Version=ShockwaveFlash" alt="Get Adobe Flash Player" coords="432,440,568,477" shape="rect" target="_blank">
+                        </map>
+                        <img usemap="#noflash" src="img/noflash.jpg" alt="" height="870" width="990" border="0" />
                     </div>
                     <script type="text/javascript">
-                        // Simulating the presence of Flash
-                        var so = new SWFObject("calendar.swf?t=" + new Date().getTime(), "stage", "900px", "578px", "9", "#ffffff");
+                        function gup(name) {
+                            name = name.replace(/[\[]/,"\\\[").replace(/[\]]/,"\\\]");
+                            var regexS = "[\\?&]"+name+"=([^&#]*)";
+                            var regex = new RegExp(regexS);
+                            var results = regex.exec(window.location.href);
+                            if (results == null)
+                                return "";
+                            else
+                                return results[1];
+                        }
+                                
+                        var so = new SWFObject("calendar.swf", "stage", "900px", "578px", "9", "#ffffff");
                         so.addParam("menu",false);
-                        // Adding variables if needed
-                        // so.addVariable("l", gup( "l" ) );
-                        // so.addVariable("c", gup( "c" ) );
-                        // so.addVariable("p", gup( "p" ) );
-                        // so.addVariable("p1", gup( "p1" ) );
+                        so.addVariable("l", gup("l"));
+                        so.addVariable("c", gup("c"));
+                        so.addVariable("p", gup("p"));
+                        so.addVariable("p1", gup("p1"));
                         so.write("flashDiv");
                     </script>
                 </td> 
