--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flash Game Emulation</title>
-    <!-- Include Ruffle JavaScript files from the CDN -->
-    <script src="https://cdn.ruffle.rs/ruffle/0.10.1/ruffle.js"></script>
+    <!-- Include Ruffle JavaScript files from unpkg.com -->
+    <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
 </head>
 <body>
     <h1>Flash Game Emulation with Ruffle</h1>
