--- a/index.html
+++ b/index.html
@@ -3,15 +3,24 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de" lang="de">
     <head>
         <title>UPIXO</title>
-        <script src="https://unpkg.com/@ruffle-rs/ruffle"></script> <!-- Ruffle JS -->
+        <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
     </head>
     <body bgcolor="#FFFFFF">
+        <div>
+            <table width="100%" height="100%">
+                <tr>
+                    <td align="center" valign="middle">
+                        <div id="flash-container"></div>
+                    </td>
+                </tr>
+            </table>
+        </div>
         <script>
             var ruffle = window.RufflePlayer.newest();
             var container = document.getElementById("flash-container");
             var player = ruffle.createPlayer();
             container.appendChild(player);
-            player.load("misnowdriftland_final.swf");  // Your SWF file
+            player.load("misnowdriftland_final.swf");
         </script>
     </body>
 </html>
